* updates for v2 of enex website

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20322,7 +20322,10 @@ html.maximized-card {
 .register-page {
   -ms-flex-align: center;
   align-items: center;
-  background: #e9ecef;
+  background: url('/images/bg-login3.webp');
+  image-rendering: -webkit-optimize-contrast;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -20330,6 +20333,16 @@ html.maximized-card {
   height: 100vh;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #212529;
+  opacity: .5;
 }
 
 .login-box,
